--- a/merchant-js-customization/resizeImage.css
+++ b/merchant-js-customization/resizeImage.css
@@ -1,8 +1,9 @@
+/* default target image size is 150px, in this example we change it to 200px */
 .findify-mjs-search-results .findify-mjs-search-results__main .findify-mjs-search-results__main__content .findify-mjs-search-results__main__content__product .findify-mjs-search-results__main__content__product__box .findify-mjs-search-results__main__content__product__box__image {
-    min-height: 200px;
-    max-height: 200px;
+    min-height: 200px; /* target image size */
+    max-height: 200px; /* target image size */ 
 }
 
 .findify-mjs-search-results .findify-mjs-search-results__main .findify-mjs-search-results__main__content .findify-mjs-search-results__main__content__product .findify-mjs-search-results__main__content__product__box .findify-mjs-search-results__main__content__product__box__image>img { 
-    max-height: 200px;
+    max-height: 200px; /* target image size */
 }
